Issue #9904: fix and clarify some comments + fix indentation in symtable code